package org.totalgrid.reef.proto.Utils;


option java_package = "org.totalgrid.reef.proto";
option java_outer_classname = "Utils";


//  MAJOR TYPES IN THIS PROTO:
//
//  AttributeList  -- A list of name-value pairs


// USE CASES:
//
//  _______________________________________________________
//  ...


// A single attribute with a name and one typed value.
//
message Attribute {

  enum Type {
    STRING  = 1;
    SINT64  = 3;   // Signed int up to 64 bits. Unsigned up to 63 bits.
    DOUBLE  = 7;   // float and double
    BOOL    = 8;
    BYTES   = 9;
  }

  required string name       = 1;  // Name of the attribute
  required Type   vtype      = 2;  // Which value type below
  optional string vdescriptor = 3;  // High-level client-specified descriptor: name, ID, phone, date, time, etc.

  // One of the following
  optional string  value_string  = 10;
  optional sint64  value_sint64  = 11;
  optional double  value_double  = 12;
  optional bool    value_bool    = 13;
  optional bytes   value_bytes   = 14;
}


// A list of attributes.
//
message AttributeList {
  repeated Attribute attribute = 1;  // Repeated name-value pairs.
}

